syntax = "proto3";

option java_package = "cn.edu.ruc.iir.paraflow.metaserver.proto";
option java_outer_classname = "MetaProto";
option objc_class_prefix = "META";

package meta;

service Meta {
    rpc listDatabases(NoneType) returns (StringListType) {}
    rpc listTables(DbNameParam) returns (StringListType) {}
    rpc getDatabase(DbNameParam) returns (DbParam) {}
    rpc getTable(DbTblParam) returns (TblParam) {}
    rpc getColumn(DbTblColParam) returns (ColParam) {}
    rpc createDatabase(DbParam) returns (StatusType) {}
    rpc createTable(TblParam) returns (StatusType) {}
    rpc deleteDatabase(DbNameParam) returns (StatusType) {}
    rpc deleteTable(DbTblParam) returns (StatusType) {}
    rpc renameDatabase(RenameDbParam) returns (StatusType) {}
    rpc renameTable(RenameTblParam) returns (StatusType) {}
    rpc renameColumn(RenameColParam) returns (StatusType) {}
    rpc createDbParam(CreateDbParamParam) returns (StatusType) {}
    //rpc createDbPrivs(CreateDbPrivsParam) returns (StatusType) {}
    rpc createTblParam(CreateTblParamParam) returns (StatusType) {}
    rpc createTblPriv(CreateTblPrivParam) returns (StatusType) {}
    rpc createStorageFormat(CreateStorageFormatParam) returns (StatusType) {}
    rpc createFiberFunc(CreateFiberFuncParam) returns (StatusType) {}
    rpc createBlockIndex(CreateBlockIndexParam) returns (StatusType) {}
    rpc createUser(CreateUserParam) returns (StatusType) {}
    rpc filterBlockIndex(FilterBlockIndexParam) returns (StringListType) {}
    rpc filterBlockIndexByFiber(FilterBlockIndexByFiberParam) returns (StringListType) {}
}

// Models

message VerModel {
    int32 verId = 1;
}

message DbModel {
    int64 dbId = 1;
    string dbName = 2;
    string locationUrl = 3;
    int64 userId = 4;
}

message DbParamModel {
    int64 dbId = 1;
    string paramKey = 2;
    string paramValue = 3;
}

message DbPrivsModel {
    int64 dbPrivId = 1;
    int64 grantTime = 2;
    int64 userId = 3;
    int32 privType = 4;
    int64 dbId = 5;
}

message TblModel {
    int64 tblId = 1;
    int64 dbId = 2;
    int64 createTime = 3;
    int64 lastAccessTime = 4;
    int64 userId = 5;
    string tblName = 6;
    int32 tblType = 7;
    int64 fiberColId = 8;
    string locationUrl = 9;
    int32 storageFormatId = 10;
    int64 fiberFuncId = 11;
}

message TblParamModel {
    int64 tblId = 1;
    string paramKey = 2;
    string paramValue = 3;
}

message TblPrivModel {
    int64 tblPrivId = 1;
    int64 grantTime = 2;
    int32 privType = 3;
    int64 tblId = 4;
}

message StorageFormatModel {
    int32 storageFormatId = 1;
    string compression = 2;
    string serialFormat = 3;
}

message ColModel {
    int64 colId = 1;
    int64 tblId = 2;
    string colName = 3;
    string colType = 4;
    string dataType = 5;
    int32 colIndex = 6;
}

message FiberFuncNodel {
    int64 fiberFuncId = 1;
    string fiberFuncName = 2;
    bytes fiberFuncContent = 3;
}

message BlockIndex {
    int64 blockIndexId = 1;
    int64 tblId = 2;
    int64 fiberValue = 3;
    int64 timeBegin = 4;
    int64 timeEnd = 5;
    string timeZone = 6;
    string blockPath = 7;
}

message UserModel {
    string userName = 1;
    string userPass = 2;
    string roleName = 3;
    int64 creationTime = 4;
    int64 lastVisitTime = 5;
}

// Customized types

message NoneType {

}

message StringListType {
    repeated string str = 1;
}

message LongListType {
    repeated int64 lon = 1;
}

message ColumnListType {
    repeated ColModel column = 1;
}

message FiberValueType {
    int64 value = 1;
}

message StatusType {
    enum State {
        OK = 0;
        DATABASE_ALREADY_EXISTS = 1;
        DATABASE_NOT_FOUND = 2;
        TABLE_ALREADY_EXISTS = 3;
        TABLE_NOT_FOUND = 4;
        COLUMN_ALREADY_EXISTS = 5;
        COLUMN_NOT_FOUND = 6;
        FIBER_ALREADY_EXISTS = 7;
        BLOCK_INDEX_ERROR = 8;
    }
    State status = 1;
}

// Customized paremeters

message DbParam {
    string dbName = 1;
    string locationUrl = 2;
    string userName = 3;
}

message TblParam {
    string dbName = 1;
    string tblName = 2;
    int32 tblType = 3;
    string userName = 4;
    int64 createTime = 5;
    int64 lastAccessTime = 6;
    string locationUrl = 7;
    int32 storageFormatId = 8;
    int64 fiberColId = 9;
    int64 fiberFuncId = 10;
}

message ColParam {
    int32 colIndex = 1;
    string tblName = 2;
    string colName = 3;
    string colType = 4;
    string dataType = 5;
}

message DbNameParam {
    string database = 1;
}

message TblNameParam {
    string table = 1;
}

message ColNameParam {
    string column = 1;
}

message DbTblParam {
    DbNameParam database = 1;
    TblNameParam table = 2;
}

message DbTblColParam {
    DbNameParam database = 1;
    TblNameParam table = 2;
    ColNameParam column = 3;
}

message RenameDbParam {
    string old_name = 1;
    string new_name = 2;
}

message RenameTblParam {
    DbNameParam database = 1;
    string old_name = 2;
    string new_name = 3;
}

message RenameColParam {
    DbNameParam database = 1;
    TblNameParam table = 2;
    string old_name = 3;
    string new_name = 4;
}

message CreateBlockIndexParam {
    DbNameParam database = 1;
    TblNameParam table = 2;
    FiberValueType value = 3;
    string begin_time = 4;
    string end_time = 5;
    string path = 6;
}

message FilterBlockIndexParam {
    DbNameParam database = 1;
    TblNameParam table = 2;
    string timelow = 3;
    string timehigh = 4;
}

message FilterBlockIndexByFiberParam {
    DbNameParam database = 1;
    TblNameParam table = 2;
    FiberValueType value = 3;
    string timelow = 4;
    string timehigh = 5;
}

message CreateDbParamParam {
    string dbName = 1;
    string paramKey = 2;
    string paramValue = 3;
}

//message CreateDbPrivsParam {
//    string dbName = 1;
//    string userName = 2;
//    int32 privType = 3;
//    int64 grantTime = 4;
//}

message CreateTblParamParam {
    string tblName = 1;
    string paramKey = 2;
    string paramValue = 3;
}

message CreateTblPrivParam {
    string tblName = 1;
    string userName = 2;
    int32 privType = 3;
    int64 grantTime = 4;
}

message CreateStorageFormatParam {
    string storageFormatName = 1;
    string compression = 2;
    string serialFormat = 3;
}

message CreateFiberFuncParam {
    string fiberFuncName = 1;
    string fiberFuncContent = 2;
}

message CreateUserParam {
    string userName = 1;
    int64 createTime = 2;
    int64 lastVisitTime = 3;
}